--- a/package.json
+++ b/package.json
@@ -6,21 +6,32 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:push": "drizzle-kit push:sqlite",
+    "db:migrate": "drizzle-kit generate:sqlite"
   },
   "dependencies": {
+    "@libsql/client": "^0.6.0",
+    "@lucia-auth/adapter-drizzle": "^1.0.7",
+    "@nextui-org/react": "^2.2.10",
+    "arctic": "^1.5.0",
+    "drizzle-orm": "^0.30.8",
+    "framer-motion": "^11.0.28",
+    "lucia": "^3.1.1",
+    "next": "14.2.1",
+    "oslo": "^1.2.0",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "drizzle-kit": "^0.20.14",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.1"
+    "typescript": "^5"
   }
 }
