--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "db:migrate": "drizzle-kit generate:sqlite"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@libsql/client": "^0.6.0",
     "@lucia-auth/adapter-drizzle": "^1.0.7",
     "@nextui-org/react": "^2.2.10",
@@ -19,9 +20,13 @@
     "framer-motion": "^11.0.28",
     "lucia": "^3.1.1",
     "next": "14.2.1",
+    "next-themes": "^0.3.0",
     "oslo": "^1.2.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.3",
+    "react-icons": "^5.1.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
