--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,8 @@ yarn-error.log*
 .env*.local
 .env
 
+
+
 # vercel
 .vercel
 
@@ -39,3 +41,5 @@ next-env.d.ts
 
 # drizzle migration
 migrations/
+
+/src/emails/node_modules
