--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
+    "resend": "^3.2.0",
+    "sonner": "^1.4.41",
     "zod": "^3.22.4"
   },
   "devDependencies": {
