--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@libsql/client": "^0.6.0",
     "@lucia-auth/adapter-drizzle": "^1.0.7",
     "@nextui-org/react": "^2.2.10",
+    "@react-email/components": "0.0.16",
     "arctic": "^1.5.0",
     "drizzle-orm": "^0.30.8",
     "framer-motion": "^11.0.28",
