--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "arctic": "^1.5.0",
     "drizzle-orm": "^0.30.8",
     "framer-motion": "^11.0.28",
+    "input-otp": "^1.2.4",
     "lucia": "^3.1.1",
     "next": "14.2.1",
     "next-themes": "^0.3.0",
