--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "db:migrate": "drizzle-kit generate:sqlite"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/sortable": "^7.0.2",
     "@hookform/resolvers": "^3.3.4",
     "@libsql/client": "^0.6.0",
     "@lucia-auth/adapter-drizzle": "^1.0.7",
@@ -30,7 +32,8 @@
     "react-icons": "^5.1.0",
     "resend": "^3.2.0",
     "sonner": "^1.4.41",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
